add loadbalance cfg

--- a/pageconfig/252cpa.cfg
+++ b/pageconfig/252cpa.cfg
@@ -9,4 +9,9 @@ http://192.168.1.1/x_myset2.cgi?type=objOperate&action=edit&id=OID_FatAp&value=<
 http://192.168.1.1/x_myset2.cgi?type=objOperate&action=edit&id=OID_Nav5g&value=<OID_Nav5g>Enable=1</OID_Nav5g>
 /* Nav 5g end */
 
+
+/* Loadbalance start */
+http://192.168.200.1/x_myset2.cgi?type=objOperate&action=edit&id=OID_LoadBalance&value=<OID_LoadBalance>Enable=1</OID_LoadBalance>
+/* Loadbalance end */
+
 172.17.62.115
